// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch matches forest theme snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": 0.5,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": true,
            "disabled": true,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_u_"
        style={
          {
            "backgroundColor": "hsl(0, 0%, 96.3%)",
            "borderBottomColor": "#6C4EFF",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#6C4EFF",
            "borderLeftWidth": 1,
            "borderRightColor": "#6C4EFF",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#6C4EFF",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Switch matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": 1,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": false,
            "disabled": false,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_l_"
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#E7E7EF",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#E7E7EF",
            "borderLeftWidth": 1,
            "borderRightColor": "#E7E7EF",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#E7E7EF",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Switch matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 12,
      "opacity": 1,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      onBlur={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        accessibilityRole="switch"
        accessibilityState={
          {
            "busy": false,
            "checked": true,
            "disabled": false,
          }
        }
        accessible={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        id="_r_c_"
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "hsl(0, 0%, 96.3%)",
            "borderBottomColor": "#6C4EFF",
            "borderBottomLeftRadius": 1000,
            "borderBottomRightRadius": 1000,
            "borderBottomWidth": 1,
            "borderLeftColor": "#6C4EFF",
            "borderLeftWidth": 1,
            "borderRightColor": "#6C4EFF",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#6C4EFF",
            "borderTopLeftRadius": 1000,
            "borderTopRightRadius": 1000,
            "borderTopWidth": 1,
            "flexDirection": "column",
            "height": 23,
            "minHeight": 23,
            "width": 46,
          }
        }
        tabIndex={0}
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "stretch",
              "flex": 1,
            }
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "backgroundColor": "#FFFFFF",
                "borderBottomLeftRadius": 1000,
                "borderBottomRightRadius": 1000,
                "borderTopLeftRadius": 1000,
                "borderTopRightRadius": 1000,
                "flexDirection": "column",
                "height": 23,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
                "width": 23,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
